# serializer version: 1
# name: test_all_entities[event.ar_00000001_lightning_strike-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'lightning_strike',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.ar_00000001_lightning_strike',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lightning strike',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lightning strike',
    'platform': 'weatherflow',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lightning_strike_event',
    'unique_id': 'AR-00000001_lightning_strike_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.ar_00000001_lightning_strike-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'lightning_strike',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AR-00000001 Lightning strike',
    }),
    'context': <ANY>,
    'entity_id': 'event.ar_00000001_lightning_strike',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.sk_00000001_precipitation_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'precipitation_start',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.sk_00000001_precipitation_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Precipitation start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Precipitation start',
    'platform': 'weatherflow',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'precip_start_event',
    'unique_id': 'SK-00000001_precip_start_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.sk_00000001_precipitation_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'precipitation_start',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'SK-00000001 Precipitation start',
    }),
    'context': <ANY>,
    'entity_id': 'event.sk_00000001_precipitation_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.st_00000001_lightning_strike-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'lightning_strike',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.st_00000001_lightning_strike',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lightning strike',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lightning strike',
    'platform': 'weatherflow',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lightning_strike_event',
    'unique_id': 'ST-00000001_lightning_strike_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.st_00000001_lightning_strike-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'lightning_strike',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ST-00000001 Lightning strike',
    }),
    'context': <ANY>,
    'entity_id': 'event.st_00000001_lightning_strike',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[event.st_00000001_precipitation_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'precipitation_start',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.st_00000001_precipitation_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Precipitation start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Precipitation start',
    'platform': 'weatherflow',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'precip_start_event',
    'unique_id': 'ST-00000001_precip_start_event',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[event.st_00000001_precipitation_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'precipitation_start',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ST-00000001 Precipitation start',
    }),
    'context': <ANY>,
    'entity_id': 'event.st_00000001_precipitation_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
